# ai-agent-news-digest

./: .gitignore  README.md  com.agent-news.daily.plist  main.py  pyproject.toml
src/: agent.py  analyzer.py  cli.py  fetcher.py  memory.py  scheduler.py  tools.py
